# fastapi-jwt-auth3

./: .gitignore  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: buildtestworkflow.yaml
docs/: docusaurus.config.ts  package-lock.json
src/fastapi_jwt_auth/: errors.py  jwtauth.py  models.py
src/fastapi_jwt_auth3/: cli.py  jwtauth.py  models.py
tests/: conftest.py  test_auth.py  test_keygen_cli.py  test_webserver.py
